--- a/public/output.css
+++ b/public/output.css
@@ -567,12 +567,20 @@ video {
   left: 3.5rem;
 }
 
+.left-2\/4 {
+  left: 50%;
+}
+
 .left-72 {
   left: 18rem;
 }
 
 .left-96 {
   left: 24rem;
+}
+
+.top-32 {
+  top: 8rem;
 }
 
 .top-40 {
@@ -583,112 +591,20 @@ video {
   top: 20rem;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
-.left-9 {
-  left: 2.25rem;
-}
-
-.left-2\/4 {
-  left: 50%;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-44 {
-  top: 11rem;
-}
-
-.top-48 {
-  top: 12rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
 .top-0 {
   top: 0px;
 }
 
-.left-0 {
-  left: 0px;
+.top-5 {
+  top: 1.25rem;
 }
 
-.left-3 {
-  left: 0.75rem;
+.top-56 {
+  top: 14rem;
 }
 
-.left-32 {
-  left: 8rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.left-40 {
-  left: 10rem;
-}
-
-.left-48 {
-  left: 12rem;
-}
-
-.left-6 {
-  left: 1.5rem;
-}
-
-.left-64 {
-  left: 16rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.left-24 {
-  left: 6rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.left-3\/4 {
-  left: 75%;
+.left-9 {
+  left: 2.25rem;
 }
 
 .mx-10 {
@@ -745,8 +661,8 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-28 {
-  margin-bottom: 7rem;
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-10 {
@@ -761,76 +677,136 @@ video {
   margin-top: 6rem;
 }
 
-.mt-48 {
-  margin-top: 12rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-6 {
   margin-top: 1.5rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.ml-80 {
+  margin-left: 20rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.ml-56 {
+  margin-left: 14rem;
 }
 
-.mt-36 {
-  margin-top: 9rem;
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
+.ml-36 {
+  margin-left: 9rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.ml-40 {
+  margin-left: 10rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.ml-44 {
+  margin-left: 11rem;
 }
 
 .ml-48 {
   margin-left: 12rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mt-40 {
+  margin-top: 10rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mt-96 {
+  margin-top: 24rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mt-44 {
+  margin-top: 11rem;
+}
+
+.mt-60 {
+  margin-top: 15rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
   display: flex;
 }
 
+.\!flex {
+  display: flex !important;
+}
+
 .grid {
   display: grid;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-60 {
+  height: 15rem;
+}
+
+.h-0 {
+  height: 0px;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-72 {
+  height: 18rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .w-4\/5 {
@@ -849,24 +825,36 @@ video {
   width: 100%;
 }
 
-.w-9 {
-  width: 2.25rem;
+.w-12 {
+  width: 3rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.flex-col {
-  flex-direction: column;
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.place-content-end {
-  place-content: end;
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -893,6 +881,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -901,24 +893,16 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-16 {
-  gap: 4rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-t-lg {
@@ -933,11 +917,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-indigo-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(79 70 229 / var(--tw-border-opacity));
 }
 
 .bg-\[\#fff\] {
@@ -960,9 +939,28 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#1a9bdc\] {
+.bg-slate-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(26 155 220 / var(--tw-bg-opacity));
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+.bg-cyan-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 211 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\'pic\/anila-bg-img\.png\'\)\] {
+  background-image: url('pic/anila-bg-img.png');
 }
 
 .bg-\[url\(\'pic\/header-bg\.png\'\)\] {
@@ -971,66 +969,6 @@ video {
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\'pic\/header-bg\.pn\'\)\] {
-  background-image: url('pic/header-bg.pn');
-}
-
-.bg-\[url\(\'pic\/\'\)\] {
-  background-image: url('pic/');
-}
-
-.bg-\[url\(\'pic\/a\'\)\] {
-  background-image: url('pic/a');
-}
-
-.bg-\[url\(\'pic\/anil\'\)\] {
-  background-image: url('pic/anil');
-}
-
-.bg-\[url\(\'pic\/anila\'\)\] {
-  background-image: url('pic/anila');
-}
-
-.bg-\[url\(\'pic\/anila-\'\)\] {
-  background-image: url('pic/anila-');
-}
-
-.bg-\[url\(\'pic\/anila-bg\'\)\] {
-  background-image: url('pic/anila-bg');
-}
-
-.bg-\[url\(\'pic\/anila-bg\.p\'\)\] {
-  background-image: url('pic/anila-bg.p');
-}
-
-.bg-\[url\(\'pic\/anila-bg\.png\'\)\] {
-  background-image: url('pic/anila-bg.png');
-}
-
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
-
-.bg-\[url\(\'pi\'\)\] {
-  background-image: url('pi');
-}
-
-.bg-\[url\(\'pic\'\)\] {
-  background-image: url('pic');
-}
-
-.bg-\[url\(\'pic\/a-bg\.png\'\)\] {
-  background-image: url('pic/a-bg.png');
-}
-
-.bg-\[url\(\'pic\/ani-bg\.png\'\)\] {
-  background-image: url('pic/ani-bg.png');
-}
-
-.bg-\[url\(\'pic\/anila-bg-img\.png\'\)\] {
-  background-image: url('pic/anila-bg-img.png');
 }
 
 .from-\[\#da803f\] {
@@ -1063,6 +1001,10 @@ video {
   padding: 6rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1071,52 +1013,16 @@ video {
   padding: 2.25rem;
 }
 
-.p-40 {
-  padding: 10rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-28 {
-  padding: 7rem;
-}
-
-.p-64 {
-  padding: 16rem;
-}
-
-.p-48 {
-  padding: 12rem;
-}
-
-.p-96 {
-  padding: 24rem;
-}
-
-.p-7 {
-  padding: 1.75rem;
-}
-
-.p-72 {
-  padding: 18rem;
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-80 {
-  padding: 20rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-14 {
@@ -1132,6 +1038,11 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-10 {
@@ -1158,20 +1069,36 @@ video {
   padding-bottom: 3.5rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pb-52 {
+  padding-bottom: 13rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
 .pt-32 {
   padding-top: 8rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
 }
 
 .pt-52 {
@@ -1182,145 +1109,162 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pb-24 {
-  padding-bottom: 6rem;
-}
-
-.pb-28 {
-  padding-bottom: 7rem;
-}
-
-.pb-52 {
-  padding-bottom: 13rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-64 {
-  padding-bottom: 16rem;
-}
-
-.pl-48 {
-  padding-left: 12rem;
-}
-
-.pl-32 {
-  padding-left: 8rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
-.pl-36 {
-  padding-left: 9rem;
-}
-
-.pb-48 {
-  padding-bottom: 12rem;
+.pb-9 {
+  padding-bottom: 2.25rem;
 }
 
 .pb-96 {
   padding-bottom: 24rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.pb-40 {
+  padding-bottom: 10rem;
 }
 
-.pr-0 {
-  padding-right: 0px;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
-.pl-9 {
-  padding-left: 2.25rem;
+.pt-9 {
+  padding-top: 2.25rem;
 }
 
-.pl-96 {
-  padding-left: 24rem;
+.pt-96 {
+  padding-top: 24rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
-.pb-56 {
-  padding-bottom: 14rem;
-}
-
-.pl-40 {
-  padding-left: 10rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-24 {
-  padding-left: 6rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-16 {
-  padding-left: 4rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
+.pt-80 {
+  padding-top: 20rem;
 }
 
 .pt-10 {
   padding-top: 2.5rem;
 }
 
-.pt-14 {
-  padding-top: 3.5rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
 }
 
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-40 {
+  padding-left: 10rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pl-60 {
+  padding-left: 15rem;
+}
+
+.pl-64 {
+  padding-left: 16rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-56 {
+  padding-left: 14rem;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
 
-.text-left {
-  text-align: left;
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pl-52 {
+  padding-left: 13rem;
+}
+
+.pl-48 {
+  padding-left: 12rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-36 {
+  padding-bottom: 9rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-60 {
+  padding-top: 15rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pl-32 {
+  padding-left: 8rem;
+}
+
+.pl-36 {
+  padding-left: 9rem;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
-.text-end {
-  text-align: end;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -1330,6 +1274,11 @@ video {
 
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -1348,24 +1297,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1384,8 +1323,20 @@ video {
   font-weight: 600;
 }
 
+.font-black {
+  font-weight: 900;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-3 {
+  line-height: .75rem;
 }
 
 .text-black {
@@ -1398,14 +1349,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-yellow-300 {
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity));
-}
-
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.text-yellow-300 {
+  --tw-text-opacity: 1;
+  color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
 .shadow-xl {
@@ -1500,26 +1451,43 @@ video {
     left: 7rem;
   }
 
+  .sm\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:grid {
+    display: grid;
   }
 
   .sm\:w-96 {
     width: 24rem;
   }
 
-  .sm\:pb-5 {
-    padding-bottom: 1.25rem;
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .sm\:p-8 {
+    padding: 2rem;
+  }
+
+  .sm\:pl-40 {
+    padding-left: 10rem;
+  }
+
+  .sm\:text-center {
+    text-align: center;
   }
 }
 
 @media (min-width: 768px) {
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
-  }
-
-  .md\:col-span-1 {
-    grid-column: span 1 / span 1;
   }
 
   .md\:my-0 {
@@ -1530,11 +1498,23 @@ video {
   .md\:flex {
     display: flex;
   }
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
 }
 
 @media (min-width: 1024px) {
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 640px) {
+  @media (min-width: 1280px) {
+    .sm\:xl\:grid-cols-7 {
+      grid-template-columns: repeat(7, minmax(0, 1fr));
+    }
   }
 }
 
@@ -1556,16 +1536,20 @@ video {
     margin-left: 8rem;
   }
 
-  .xl\:ml-96 {
-    margin-left: 24rem;
-  }
-
   .xl\:mt-52 {
     margin-top: 13rem;
   }
 
-  .xl\:ml-9 {
-    margin-left: 2.25rem;
+  .xl\:ml-48 {
+    margin-left: 12rem;
+  }
+
+  .xl\:ml-4 {
+    margin-left: 1rem;
+  }
+
+  .xl\:ml-44 {
+    margin-left: 11rem;
   }
 
   .xl\:flex {
@@ -1584,6 +1568,10 @@ video {
     width: 20%;
   }
 
+  .xl\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1596,20 +1584,16 @@ video {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
-  .xl\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-
-  .xl\:place-items-end {
-    place-items: end;
-  }
-
-  .xl\:gap-8 {
-    gap: 2rem;
+  .xl\:grid-cols-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
   .xl\:gap-5 {
     gap: 1.25rem;
+  }
+
+  .xl\:gap-8 {
+    gap: 2rem;
   }
 
   .xl\:border-y-2 {
@@ -1625,8 +1609,9 @@ video {
     border-style: dotted;
   }
 
-  .xl\:p-80 {
-    padding: 20rem;
+  .xl\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .xl\:px-40 {
@@ -1634,29 +1619,9 @@ video {
     padding-right: 10rem;
   }
 
-  .xl\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .xl\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
-  .xl\:px-56 {
-    padding-left: 14rem;
-    padding-right: 14rem;
-  }
-
-  .xl\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .xl\:px-80 {
-    padding-left: 20rem;
-    padding-right: 20rem;
+  .xl\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
   }
 
   .xl\:pb-60 {
@@ -1667,56 +1632,12 @@ video {
     padding-bottom: 18rem;
   }
 
-  .xl\:pl-8 {
-    padding-left: 2rem;
-  }
-
-  .xl\:pl-80 {
-    padding-left: 20rem;
-  }
-
-  .xl\:pl-7 {
-    padding-left: 1.75rem;
-  }
-
-  .xl\:pl-72 {
-    padding-left: 18rem;
-  }
-
-  .xl\:pl-6 {
-    padding-left: 1.5rem;
-  }
-
-  .xl\:pl-64 {
-    padding-left: 16rem;
-  }
-
-  .xl\:pl-60 {
-    padding-left: 15rem;
-  }
-
-  .xl\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .xl\:pl-52 {
-    padding-left: 13rem;
-  }
-
-  .xl\:pl-36 {
-    padding-left: 9rem;
+  .xl\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .xl\:pl-96 {
     padding-left: 24rem;
-  }
-
-  .xl\:pl-12 {
-    padding-left: 3rem;
-  }
-
-  .xl\:pl-10 {
-    padding-left: 2.5rem;
   }
 
   .xl\:pl-1 {
@@ -1729,10 +1650,6 @@ video {
 
   .xl\:text-center {
     text-align: center;
-  }
-
-  .xl\:text-end {
-    text-align: end;
   }
 
   .xl\:text-2xl {
